--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pp-parking": {
+    "perched-peacock-ui": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/pp-parking",
+            "outputPath": "dist/perched-peacock-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pp-parking:build"
+            "browserTarget": "perched-peacock-ui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "pp-parking:build:production"
+              "browserTarget": "perched-peacock-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pp-parking:build"
+            "browserTarget": "perched-peacock-ui:build"
           }
         },
         "test": {
@@ -115,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "pp-parking:serve"
+            "devServerTarget": "perched-peacock-ui:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "pp-parking:serve:production"
+              "devServerTarget": "perched-peacock-ui:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "pp-parking"
+  "defaultProject": "perched-peacock-ui"
 }
