--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,13 @@
 version: 2
 jobs:
   build:
+    machine: true
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - run: docker build -t perched-peacock-ui:CIRCLE_BUILD_NUM .
+  test:
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
@@ -31,3 +38,10 @@ jobs:
 
       # run tests!
       - run: yarn test
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build
+    - test
